# cvgb

./: Cargo.toml  flake.nix
attempt1/: Cargo.toml
attempt1/src/: main.rs
attempt1/src/gb/: bus.rs  core.rs  dma.rs  input.rs  memory.rs  mod.rs  timer.rs  variant.rs
attempt1/src/gb/instruction/: decode.rs  disassemble.rs  mod.rs
src/: main.rs
src/app/: gui.rs  gui_renderer.rs  mod.rs  renderer.rs  state.rs  timing.rs  ui.rs  windows.rs
src/app/game_renderer/: mod.rs
src/core/: mod.rs
src/core/context/: interrupts.rs  mod.rs
src/core/cpu/: instructions.rs  mod.rs  opcode.rs  registers.rs  tests.rs
src/game_boy/: events.rs  input.rs  mod.rs  system.rs  time.rs
src/game_boy/cartridge/: mbc.rs  mod.rs
src/game_boy/context/: interrupts.rs  mod.rs  p1.rs
src/game_boy/cpu/: decode.rs  mod.rs  registers.rs  tests.rs
src/gb/: bus.rs  constants.rs  core.rs  mod.rs  ppu.rs  render.rs  wram.rs
src/gb/boot_rom/: mod.rs
src/gb/cartridge/: mbc.rs  mod.rs
src/gb/instruction/: decode.rs  execute.rs  groupings.rs  mod.rs
test/: mult.asm  mult.gb
