[package]
name = "cvgb"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
compact_str = "0.9.0"
egui = "0.32.0"
egui-wgpu = "0.32.0"
egui-winit = "0.32.0"
enum-assoc = "1.2.4"
env_logger = "0.11.8"
log = "0.4.27"
modular-bitfield = "0.12.0"
pollster = "0.4.0"
thiserror = "2.0.12"
wgpu = "25.0.2"
winit = "0.30.12"
